Project Upload refactor